...
        button.backgroundColor = UIColor.white
        button.addTarget(
            nil,
            action: #selector(loginButtonTapped),
            for: .touchUpInside
        )
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()

    weak var delegate: AuthViewControllerDelegate?

    override func viewDidLoad() {
...
